2010-01-25  Murray Cumming  <murrayc@murrayc.com>

	Entry: Added get_text_window() and get_icon_window().

	* gtk/src/entry.hg: Added get_text_window() and get_icon_window().

2010-01-19  Murray Cumming  <murrayc@murrayc.com>

	Updated gtk_docs.xml to get API reference for new methods.

	* gtk/src/gtk_docs.xml: Regnerated with docextract_to_xml.py.

2010-01-19  Murray Cumming  <murrayc@murrayc.com>

	Wrapped some new GTK+ functions.

	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py
	* gtk/src/action.hg: Added get/set_always_show_image() and property.
	* gtk/src/fontselection.hg: Added get_family_list(), get_face_list(), 
	get_size_list(). Reimplemented get_size_entry() and get_preview_entry() 
	using new functions instead of struct fields.
	Added get_family() and get_face().
	* tools/m4/convert_pango.m4: Added necessary FontFace and FontFamily 
	conversions.
	* gtk/src/printcontext.hg: Added get_hard_margins().
	* gtk/src/widget.[hg|ccg]: Added has_rc_style(), wrapping the new C function, 
	deprecating rc_style().
	* gtk/src/window.hg: Added get_icon_name() and icon_name property.
	* gtk/src/toolpalette.hg: set_drag_source(), add_drag_dest(): 
	Add suitable default parameter values.

2010-01-16  Murray Cumming  <murrayc@murrayc.com>

	ToolItemGroup: Slight API improvements.
  
	* gtk/src/toolitemgroup.[hg|ccg]: Added insert() with no position parameter.
	get_item_position(): Made this const.
	
2010-01-14  Murray Cumming  <murrayc@murrayc.com>

	Added OffscreenWindow. Added Window::get/set_mnemonics_visible().

	* gtk/src/offscreenwindow.[hg|ccg]: Added this, wrapping 
	GtkOffscreenWindow.
	* gtk/gtkmm.h: Include offscreenwindow.h.
	* gtk/src/window.hg: Added get/set_mnemonics_visible().
	Added mnemonics, accept-focus, and focus-on-map properties.

2010-01-14  Murray Cumming  <murrayc@murrayc.com>

	Fix build with latest GTK+.

	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py
	* gtk/src/toolpalette.hg: Fix the build with latest GTK+.