@@ -27,6 +27,7 @@
 #include <gtkmm/adjustment.h>
 #include <gtkmm/image.h> //For ImageType.
 #include <gtkmm/border.h>
+#include <gtkmm/entrybuffer.h>
 
 _DEFS(gtkmm,gtk)
 _PINCLUDE(gtkmm/private/widget_p.h)
@@ -61,7 +62,12 @@ class Entry
 public:
 
   _CTOR_DEFAULT
-  
+  _WRAP_CTOR(Entry(const Glib::RefPtr<EntryBuffer>& buffer), gtk_entry_new_with_buffer)
+
+  _WRAP_METHOD(Glib::RefPtr<EntryBuffer> get_buffer(), gtk_entry_get_buffer, refreturn)
+  _WRAP_METHOD(Glib::RefPtr<const EntryBuffer> get_buffer() const, gtk_entry_get_buffer, refreturn, constversion)
+
+  _WRAP_METHOD(void set_buffer(const Glib::RefPtr<EntryBuffer>& buffer), gtk_entry_set_buffer)
 
   _WRAP_METHOD(Glib::RefPtr<Gdk::Window> get_text_window(), gtk_entry_get_text_window, refreturn)
   _WRAP_METHOD(Glib::RefPtr<const Gdk::Window> get_text_window() const, gtk_entry_get_text_window, refreturn, constversion)
@@ -190,6 +196,7 @@ public:
   _IGNORE_SIGNAL("toggle_overwrite")
   _IGNORE_SIGNAL("backspace")
 
+  _WRAP_PROPERTY("buffer", Glib::RefPtr<EntryBuffer>)
   _WRAP_PROPERTY("cursor-position", int)
   _WRAP_PROPERTY("selection-bound", int)
   _WRAP_PROPERTY("editable", bool)
