@@ -1,0 +1,48 @@
+// -*- c++ -*-
+/* $Id: entrybuffer.ccg,v 1.8 2006/11/20 09:19:49 murrayc Exp $ */
+
+/* Copyright(C) 1998-2002 The gtkmm Development Team
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2.1 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free
+ * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ */
+
+#include <gtk/gtk.h>
+#include <glib.h>
+
+
+namespace Gtk
+{
+
+EntryBuffer::EntryBuffer(const Glib::ustring& text)
+{
+  set_text(text);
+}
+
+void EntryBuffer::set_text(const Glib::ustring& text)
+{
+  gtk_entry_buffer_set_text(gobj(), text.c_str(), -1 /* see docs */); 
+}
+
+guint EntryBuffer::insert_text(guint position, const Glib::ustring& text)
+{
+  return gtk_entry_buffer_insert_text(gobj(), position, text.c_str(), -1 /* see docs */);
+}
+
+void EntryBuffer::emit_inserted_text(guint position, const Glib::ustring& text)
+{
+  gtk_entry_buffer_emit_inserted_text(gobj(), position, text.c_str(), -1 /* see docs */); 
+}
+
+} // namespace Gtk
