@@ -55,6 +55,7 @@ gtkmm_files_any_hg =		\
 	editable.hg		\
 	entry.hg		\
 	entrycompletion.hg	\
+	entrybuffer.hg		\
 	enums.hg		\
 	eventbox.hg		\
 	expander.hg		\
