@@ -119,6 +119,7 @@ int main(int argc, char** argv)
             << get_defs( GTK_TYPE_EDITABLE )
             << get_defs( GTK_TYPE_ENTRY )
             << get_defs( GTK_TYPE_ENTRY_COMPLETION )
+            << get_defs( GTK_TYPE_ENTRY_BUFFER )
             << get_defs( GTK_TYPE_EVENT_BOX )
             << get_defs( GTK_TYPE_EXPANDER )
             << get_defs( GTK_TYPE_FILE_FILTER )
