@@ -1,5 +1,13 @@
 2010-01-25  Murray Cumming  <murrayc@murrayc.com>
 
+	Added EntryBuffer and used it in the Entry API.
+
+	* gtk/src/entrybuffer.[hg|cc]: Added EntryBuffer. GtkEntryBuffer was 
+	actually added to GTK+ 2.18, but we didn't wrap it until now.
+	* gtk/src/entry.hg: Aded get/set_buffer(), propery, and new constructor.
+
+2010-01-25  Murray Cumming  <murrayc@murrayc.com>
+
 	Entry: Added get_text_window() and get_icon_window().
 
 	* gtk/src/entry.hg: Added get_text_window() and get_icon_window().
